# TimeFlow

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.sh  run_dev.sh  run_prod.sh
doc/: MVP.md
migrations/: env.py
migrations/versions/: 1384af7a2723_add_rename_user_to_users.py  6cac73fe8df4_initial_migration.py  ec5c0d2242f2_add_email_to_user.py  eedd9335eb25_add_rename_user_to_users.py
src/: start_server.py
src/time_flow/: app.py
src/time_flow/auth/: auth.py  models.py  users.py  view.py
src/time_flow/db/: base.py  database.py  dependencies.py  metadata.py  tables.py
src/time_flow/email/: __init__.py  gmail.py
src/time_flow/users/: __init__.py  manager.py
src/time_flow/utils/: __init__.py  conf.py  hasher.py  log.py  settings.py
tests/: test_simple.py
