[project]
name = "time_flow"
version = "0.0.1"
description = "Is system for time management. Study. Planing."
authors = [
    {name = "Anton Golubchikov",email = "anton1programmist@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]
license = { file = "LICENSE" }

[tool.poetry]
packages = [{ include = "time_flow", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "ruff (>=0.14.7,<0.15.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]


# Ruff 

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
ignore = ["ANN101"]
select = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# mypy configuration

[tool.mypy]
disable_error_code = ["misc"]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

mypy_path = ["src"]
namespace_packages = true

# pytest configuration

[tool.pytest.ini_options]
pythonpath = ["src"]
